# ai-toolkit

./: pyproject.toml
ui/: manager.sh  package.json
