[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "albucore==0.0.16",
    "albumentations==1.4.15",
    "bitsandbytes>=0.47.0",
    "controlnet-aux==0.0.10",
    "diffusers",
    "easy-dwpose",
    "einops>=0.8.1",
    "flatten-json>=0.1.14",
    "gradio>=5.43.1",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "invisible-watermark>=0.2.0",
    "k-diffusion>=0.1.1.post1",
    "kornia>=0.8.1",
    "lpips>=0.1.4",
    "lycoris-lora==1.8.3",
    "matplotlib==3.10.1",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.1.0",
    "opencv-python>=4.11.0.86",
    "optimum-quanto==0.2.4",
    "oyaml>=1.0",
    "peft>=0.17.1",
    "prodigyopt>=1.1.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "pytorch-fid>=0.3.0",
    "pytorch-wavelets==1.3.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "setuptools==69.5.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "toml>=0.10.2",
    "torchao==0.10.0",
    "transformers==4.52.4",
]

[tool.uv.sources]
easy-dwpose = { git = "https://github.com/jaretburkett/easy_dwpose.git" }
diffusers = { git = "https://github.com/huggingface/diffusers", rev = "7a2b78bf0f788d311cc96b61e660a8e13e3b1e63" }
